Quick whitespace fix

--- a/assets/style/_base.scss
+++ b/assets/style/_base.scss
@@ -78,7 +78,7 @@ h4 {
 
 main > article {
   max-width: var(--narrow-layout);
-  margin: 2rem auto 3rem;
+  margin: 4rem auto 3rem;
   padding: 2rem 1rem 2rem;
   background: $white;
   border-radius: var(--radius-outer);
